...
                    app:autoSizeStepGranularity="2dp"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/goal"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_task_goal"
                app:layout_constraintEnd_toStartOf="@+id/icon_button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
...
                    android:textSize="16sp"
                    app:autoSizeTextType="uniform" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/details"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
...
                    android:textSize="16sp"
                    app:autoSizeTextType="uniform" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/deadline_date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_task_due_date"
...
                    tools:ignore="KeyboardInaccessibleWidget,TextFields"
                    tools:text="17.05.2020" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/deadline_time"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/hint_task_due_time"
                app:endIconMode="clear_text"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/difficulty_text"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/trivial"
                    style="@style/Theme.Default.ChipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="trivial"
                    android:text="@string/difficulty_trivial_value" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/regular"
                    style="@style/Theme.Default.ChipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="regular"
                    android:text="@string/difficulty_regular_value"
                    tools:checked="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/hard"
                    style="@style/Theme.Default.ChipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="hard"
                    android:text="@string/difficulty_hard_value" />

...
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/action_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/create_task_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/xp_gain_text"
                app:layout_constraintVertical_bias="1.0" />

            <Button
...
