...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
...
                android:id="@+id/linear_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/task_sort_indicator"
                app:layout_constraintStart_toEndOf="@+id/task_icon"
                app:layout_constraintTop_toTopOf="@+id/task_icon">

                <TextView
                    android:id="@+id/task_goal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintEnd_toStartOf="@+id/task_duration"
                    app:layout_constraintStart_toEndOf="@+id/task_icon"
                    app:layout_constraintTop_toTopOf="@+id/task_icon"
                    tools:text="Work on App" />

                <TextView
                    android:id="@+id/task_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:ellipsize="marquee"
                    android:focusable="true"
...
                android:id="@+id/recurrence_icon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:backgroundTint="?attr/colorOnSurface"
                android:contentDescription="@string/content_due_at_icon"
                app:layout_constraintBottom_toBottomOf="@+id/task_duration"
                app:layout_constraintEnd_toEndOf="@+id/task_xp"
                app:layout_constraintTop_toTopOf="@+id/task_duration"
                app:srcCompat="@drawable/ic_replay_24"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/task_icon"
...
