...
    <string name="difficulty_regular_value">regular</string>
    <string name="difficulty_hard_value">hard</string>
    <string name="difficulty_insane_value">insane</string>

    <!-- Units -->
    <string name="unit_minute_short">%d min</string>
    <string name="unit_hour_short">%d h</string>
    <string name="unit_day_short">%d d</string>
    <string name="unit_week_short">%d w</string>
    <string name="unit_year_short">%d y</string>

    <!-- Terms -->
    <string name="term_xp_value">%d XP</string>
    <string name="term_level_value">Level %d</string>
    <string name="term_due_at">Due at %s</string>
    <string name="term_due_today">Due today</string>
    <string name="term_monday_short">MON</string>
    <string name="term_monday">Monday</string>
    <string name="term_tuesday_short">TUE</string>
...
    <string name="event_task_complete">Task completed (+%d XP)</string>
    <string name="event_task_failed">Task failed</string>
    <string name="event_task_updated">Task updated</string>
    <string name="event_category_deleted">Category deleted</string>

    <!-- Buttons -->
    <string name="action_ok">OK</string>
    <string name="action_undo">Undo</string>
    <string name="action_create">Create</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_proceed_with_delete">Continue</string>
    <string name="action_set">Set</string>
...
