<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/task_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.vmaier.taski.features.tasks.TaskListFragment">

        <TextView
            android:id="@+id/header"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Sorted by: goal (ascending)"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:scrollbars="vertical"
...
