package org.vmaier.tidfl

import android.view.View
import android.view.ViewGroup
import android.widget.SeekBar
import androidx.recyclerview.widget.RecyclerView.ViewHolder
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.UiController
import androidx.test.espresso.ViewAction
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition
import androidx.test.espresso.matcher.RootMatchers.withDecorView
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import androidx.test.rule.ActivityTestRule
import org.hamcrest.Description
import org.hamcrest.Matcher
import org.hamcrest.Matchers
import org.hamcrest.Matchers.*
import org.hamcrest.TypeSafeMatcher
import org.hamcrest.core.IsInstanceOf
import org.junit.*
import org.junit.runner.RunWith
import java.util.*


@LargeTest
@RunWith(AndroidJUnit4::class)
class TaskTests {

    @Rule
    @JvmField
    var mActivityTestRule = ActivityTestRule(MainActivity::class.java)

    @Test
    fun createWithDefaultDifficulty() {

        // click on fab button
        onView(
            allOf(
                withId(R.id.fab),
                childAtPosition(allOf(withId(R.id.task_list_layout)), 1),
                isDisplayed()
            )
        )
            .perform(click())

        // type in the goal field
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.goal),
                    0
                ),
                0
            )
        )
            .perform(
                typeText("Work on App"),
                closeSoftKeyboard()
            )

        // type in the details field
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.details),
                    0
                ),
                0
            )
        )
            .perform(
                typeText("Things I Do For Loot"),
                closeSoftKeyboard()
            )

        // click on button to open the select icons dialog
        onView(
            withId(R.id.icon_button)
        )
            .perform(click())

        // type in the search field
        onView(
            withId(R.id.icd_edt_search)
        )
            .perform(
                typeText("phone"),
                closeSoftKeyboard()
            )

        // wait a bit for search results to load
        Thread.sleep(500)

        // click on the found icon
        onView(
            allOf(
                withId(R.id.icd_rcv_icon_list),
                childAtPosition(withId(R.id.icd_layout), 5)
            )
        )
            .perform(actionOnItemAtPosition<ViewHolder>(12, click()))

        // click on select in dialog
        onView(
            withId(R.id.icd_btn_select)
        )
            .perform(click())

        // drag on seekbar and change duration
        onView(
            withId(R.id.duration_bar)
        )
            .perform(setProgress(9))

        // validate task duration value
        onView(
            allOf(
                withId(R.id.duration_value),
                withText(
                    mActivityTestRule.activity.applicationContext.resources
                        .getQuantityString(R.plurals.duration_hour, 4, 4)
                )
            )
        )
            .check(matches(isDisplayed()))

        // validate task xp gain value
        onView(
            allOf(
                withId(R.id.xp_gain_value),
                withText(
                    mActivityTestRule.activity.applicationContext
                        .getString(R.string.term_xp_value, 240)
                )
            )
        )
            .check(matches(isDisplayed()))

        // click on due date
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.deadline_date),
                    0
                ),
                0
            )
        )
            .perform(scrollTo(), click())

        // click on OK button within the date picker dialog
        onView(
            allOf(
                withId(android.R.id.button1),
                withText("OK")
            )
        )
            .perform(click())

        // click on due time
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.deadline_time),
                    0
                ),
                0
            )
        )
            .perform(scrollTo(), click())

        // click on OK button within the time picker dialog
        onView(
            allOf(
                withId(android.R.id.button1),
                withText("OK")
            )
        )
            .perform(click())

        // click on create to create task
        onView(
            withId(R.id.create_task_button)
        )
            .perform(click())

        // validate that task was created and task item is displayed in the recycler view
        onView(
            allOf(
                withId(R.id.cv),
                childAtPosition(childAtPosition(withId(R.id.rv), 0), 0),
                isDisplayed()
            )
        )
            .check(matches(isDisplayed()))

        // validate task item goal
        onView(
            allOf(
                withId(R.id.task_goal),
                withText("Work on App")
            )
        )
            .check(matches(isDisplayed()))

        // validate task item details
        onView(
            allOf(
                withId(R.id.task_details),
                withText("Things I Do For Loot")
            )
        )
            .check(matches(isDisplayed()))

        // validate task item duration
        onView(
            allOf(
                withId(R.id.task_duration),
                withText(
                    mActivityTestRule.activity.applicationContext
                        .getString(R.string.unit_hour_short, 4)
                )
            )
        )
            .check(matches(isDisplayed()))

        // validate task item xp gain value
        onView(
            allOf(
                withId(R.id.task_xp),
                withText(
                    mActivityTestRule.activity.applicationContext
                        .getString(R.string.term_xp_value, 240)
                )
            )
        )
            .check(matches(isDisplayed()))

        // validate task item icon
        onView(
            allOf(
                withId(R.id.task_icon),
                // validate icon ID
                withTagValue(`is`(201))
            )
        )
            .check(matches(isDisplayed()))
    }

    @Test
    fun createWithTrivialDifficulty() {

        // click on fab button
        onView(
            allOf(
                withId(R.id.fab),
                childAtPosition(allOf(withId(R.id.task_list_layout)), 1),
                isDisplayed()
            )
        )
            .perform(click())

        // type in the goal field
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.goal),
                    0
                ),
                0
            )
        )
            .perform(
                typeText("Work on App"),
                closeSoftKeyboard()
            )

        // type in the details field
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.details),
                    0
                ),
                0
            )
        )
            .perform(
                typeText("Things I Do For Loot"),
                closeSoftKeyboard()
            )

        // click on button to open the select icons dialog
        onView(
            withId(R.id.icon_button)
        )
            .perform(click())

        // type in the search field
        onView(
            withId(R.id.icd_edt_search)
        )
            .perform(
                typeText("phone"),
                closeSoftKeyboard()
            )

        // wait a bit for search results to load
        Thread.sleep(500)

        // click on the found icon
        onView(
            allOf(
                withId(R.id.icd_rcv_icon_list),
                childAtPosition(withId(R.id.icd_layout), 5)
            )
        )
            .perform(actionOnItemAtPosition<ViewHolder>(12, click()))

        // click on select in dialog
        onView(
            withId(R.id.icd_btn_select)
        )
            .perform(click())

        // drag on seekbar and change duration
        onView(
            withId(R.id.duration_bar)
        )
            .perform(setProgress(9))

        // validate task duration value
        onView(
            allOf(
                withId(R.id.duration_value),
                withText(
                    mActivityTestRule.activity.applicationContext.resources
                        .getQuantityString(R.plurals.duration_hour, 4, 4)
                )
            )
        )
            .check(matches(isDisplayed()))

        // choose difficulty
        onView(
            withId(R.id.trivial)
        )
            .perform(click())

        // validate task xp gain value
        onView(
            allOf(
                withId(R.id.xp_gain_value),
                withText(
                    mActivityTestRule.activity.applicationContext
                        .getString(R.string.term_xp_value, 120)
                )
            )
        )
            .check(matches(isDisplayed()))

        // click on due date
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.deadline_date),
                    0
                ),
                0
            )
        )
            .perform(scrollTo(), click())

        // click on OK button within the date picker dialog
        onView(
            allOf(
                withId(android.R.id.button1),
                withText("OK")
            )
        )
            .perform(click())

        // click on due time
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.deadline_time),
                    0
                ),
                0
            )
        )
            .perform(scrollTo(), click())

        // click on OK button within the time picker dialog
        onView(
            allOf(
                withId(android.R.id.button1),
                withText("OK")
            )
        )
            .perform(click())

        // click on create to create task
        onView(
            withId(R.id.create_task_button)
        )
            .perform(click())

        // validate that task was created and task item is displayed in the recycler view
        onView(
            allOf(
                withId(R.id.cv),
                childAtPosition(childAtPosition(withId(R.id.rv), 0), 0),
                isDisplayed()
            )
        )
            .check(matches(isDisplayed()))

        // validate task item goal
        onView(
            allOf(
                withId(R.id.task_goal),
                withText("Work on App")
            )
        )
            .check(matches(isDisplayed()))

        // validate task item details
        onView(
            allOf(
                withId(R.id.task_details),
                withText("Things I Do For Loot")
            )
        )
            .check(matches(isDisplayed()))

        // validate task item duration
        onView(
            allOf(
                withId(R.id.task_duration),
                withText(
                    mActivityTestRule.activity.applicationContext
                        .getString(R.string.unit_hour_short, 4)
                )
            )
        )
            .check(matches(isDisplayed()))

        // validate task item xp gain value
        onView(
            allOf(
                withId(R.id.task_xp),
                withText(
                    mActivityTestRule.activity.applicationContext
                        .getString(R.string.term_xp_value, 120)
                )
            )
        )
            .check(matches(isDisplayed()))

        // validate task item icon
        onView(
            allOf(
                withId(R.id.task_icon),
                // validate icon ID
                withTagValue(`is`(201))
            )
        )
            .check(matches(isDisplayed()))
    }

    @Test
    fun createWithRegularDifficulty() {

        // click on fab button
        onView(
            allOf(
                withId(R.id.fab),
                childAtPosition(allOf(withId(R.id.task_list_layout)), 1),
                isDisplayed()
            )
        )
            .perform(click())

        // type in the goal field
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.goal),
                    0
                ),
                0
            )
        )
            .perform(
                typeText("Work on App"),
                closeSoftKeyboard()
            )

        // type in the details field
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.details),
                    0
                ),
                0
            )
        )
            .perform(
                typeText("Things I Do For Loot"),
                closeSoftKeyboard()
            )

        // click on button to open the select icons dialog
        onView(
            withId(R.id.icon_button)
        )
            .perform(click())

        // type in the search field
        onView(
            withId(R.id.icd_edt_search)
        )
            .perform(
                typeText("phone"),
                closeSoftKeyboard()
            )

        // wait a bit for search results to load
        Thread.sleep(500)

        // click on the found icon
        onView(
            allOf(
                withId(R.id.icd_rcv_icon_list),
                childAtPosition(withId(R.id.icd_layout), 5)
            )
        )
            .perform(actionOnItemAtPosition<ViewHolder>(12, click()))

        // click on select in dialog
        onView(
            withId(R.id.icd_btn_select)
        )
            .perform(click())

        // drag on seekbar and change duration
        onView(
            withId(R.id.duration_bar)
        )
            .perform(setProgress(9))

        // validate task duration value
        onView(
            allOf(
                withId(R.id.duration_value),
                withText(
                    mActivityTestRule.activity.applicationContext.resources
                        .getQuantityString(R.plurals.duration_hour, 4, 4)
                )
            )
        )
            .check(matches(isDisplayed()))

        // choose difficulty
        onView(
            withId(R.id.regular)
        )
            .perform(click())

        // validate task xp gain value
        onView(
            allOf(
                withId(R.id.xp_gain_value),
                withText(
                    mActivityTestRule.activity.applicationContext
                        .getString(R.string.term_xp_value, 240)
                )
            )
        )
            .check(matches(isDisplayed()))

        // click on due date
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.deadline_date),
                    0
                ),
                0
            )
        )
            .perform(scrollTo(), click())

        // click on OK button within the date picker dialog
        onView(
            allOf(
                withId(android.R.id.button1),
                withText("OK")
            )
        )
            .perform(click())

        // click on due time
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.deadline_time),
                    0
                ),
                0
            )
        )
            .perform(scrollTo(), click())

        // click on OK button within the time picker dialog
        onView(
            allOf(
                withId(android.R.id.button1),
                withText("OK")
            )
        )
            .perform(click())

        // click on create to create task
        onView(
            withId(R.id.create_task_button)
        )
            .perform(click())

        // validate that task was created and task item is displayed in the recycler view
        onView(
            allOf(
                withId(R.id.cv),
                childAtPosition(childAtPosition(withId(R.id.rv), 0), 0),
                isDisplayed()
            )
        )
            .check(matches(isDisplayed()))

        // validate task item goal
        onView(
            allOf(
                withId(R.id.task_goal),
                withText("Work on App")
            )
        )
            .check(matches(isDisplayed()))

        // validate task item details
        onView(
            allOf(
                withId(R.id.task_details),
                withText("Things I Do For Loot")
            )
        )
            .check(matches(isDisplayed()))

        // validate task item duration
        onView(
            allOf(
                withId(R.id.task_duration),
                withText(
                    mActivityTestRule.activity.applicationContext
                        .getString(R.string.unit_hour_short, 4)
                )
            )
        )
            .check(matches(isDisplayed()))

        // validate task item xp gain value
        onView(
            allOf(
                withId(R.id.task_xp),
                withText(
                    mActivityTestRule.activity.applicationContext
                        .getString(R.string.term_xp_value, 240)
                )
            )
        )
            .check(matches(isDisplayed()))

        // validate task item icon
        onView(
            allOf(
                withId(R.id.task_icon),
                // validate icon ID
                withTagValue(`is`(201))
            )
        )
            .check(matches(isDisplayed()))
    }

    @Test
    fun createWithHardDifficulty() {

        // click on fab button
        onView(
            allOf(
                withId(R.id.fab),
                childAtPosition(allOf(withId(R.id.task_list_layout)), 1),
                isDisplayed()
            )
        )
            .perform(click())

        // type in the goal field
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.goal),
                    0
                ),
                0
            )
        )
            .perform(
                typeText("Work on App"),
                closeSoftKeyboard()
            )

        // type in the details field
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.details),
                    0
                ),
                0
            )
        )
            .perform(
                typeText("Things I Do For Loot"),
                closeSoftKeyboard()
            )

        // click on button to open the select icons dialog
        onView(
            withId(R.id.icon_button)
        )
            .perform(click())

        // type in the search field
        onView(
            withId(R.id.icd_edt_search)
        )
            .perform(
                typeText("phone"),
                closeSoftKeyboard()
            )

        // wait a bit for search results to load
        Thread.sleep(500)

        // click on the found icon
        onView(
            allOf(
                withId(R.id.icd_rcv_icon_list),
                childAtPosition(withId(R.id.icd_layout), 5)
            )
        )
            .perform(actionOnItemAtPosition<ViewHolder>(12, click()))

        // click on select in dialog
        onView(
            withId(R.id.icd_btn_select)
        )
            .perform(click())

        // drag on seekbar and change duration
        onView(
            withId(R.id.duration_bar)
        )
            .perform(setProgress(9))

        // validate task duration value
        onView(
            allOf(
                withId(R.id.duration_value),
                withText(
                    mActivityTestRule.activity.applicationContext.resources
                        .getQuantityString(R.plurals.duration_hour, 4, 4)
                )
            )
        )
            .check(matches(isDisplayed()))

        // choose difficulty
        onView(
            withId(R.id.hard)
        )
            .perform(click())

        // validate task xp gain value
        onView(
            allOf(
                withId(R.id.xp_gain_value),
                withText(
                    mActivityTestRule.activity.applicationContext
                        .getString(R.string.term_xp_value, 360)
                )
            )
        )
            .check(matches(isDisplayed()))

        // click on due date
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.deadline_date),
                    0
                ),
                0
            )
        )
            .perform(scrollTo(), click())

        // click on OK button within the date picker dialog
        onView(
            allOf(
                withId(android.R.id.button1),
                withText("OK")
            )
        )
            .perform(click())

        // click on due time
        onView(
            childAtPosition(
                childAtPosition(
                    withId(R.id.deadline_time),
                    0
                ),
                0
            )
        )
            .perform(scrollTo(), click())

        // click on OK button within the time picker dialog
        onView(
            allOf(
                withId(android.R.id.button1),
                withText("OK")
            )
        )
            .perform(click())

        // click on create to create task
        onView(
            withId(R.id.create_task_button)
        )
            .perform(click())

        // validate that task was created and task item is displayed in the recycler view
        onView(
            allOf(
                withId(R.id.cv),
                childAtPosition(childAtPosition(withId(R.id.rv), 0), 0),
                isDisplayed()
            )
        )
            .check(matches(isDisplayed()))

        // validate task item goal
        onView(
            allOf(
                withId(R.id.task_goal),
                withText("Work on App")
            )
        )
            .check(matches(isDisplayed()))

        // validate task item details
        onView(
            allOf(
                withId(R.id.task_details),
                withText("Things I Do For Loot")
            )
        )
            .check(matches(isDisplayed()))

        // validate task item duration
        onView(
            allOf(
                withId(R.id.task_duration),
                withText(
                    mActivityTestRule.activity.applicationContext
                        .getString(R.string.unit_hour_short, 4)
                )
            )
        )
            .check(matches(isDisplayed()))

        // validate task item xp gain value
        onView(
            allOf(
                withId(R.id.task_xp),
                withText(
                    mActivityTestRule.activity.applicationContext
                        .getString(R.string.term_xp_value, 360)
                )
            )
        )
            .check(matches(isDisplayed()))

